# citedhealth-mcp

./: .gitignore  LICENSE  README.md  demo.tape  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/citedhealth_mcp/: __init__.py  __main__.py  server.py
tests/: test_server.py
